--- a/public/css/instasearch.css
+++ b/public/css/instasearch.css
@@ -1,31 +1,59 @@
-html, body {
-    height: 100%;
+#searchButton {
+    max-width: 130px;
+    color: rgb(230, 230, 230);
+    font-size: 14px;
+    text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    background: rgb(210, 20, 20);
+    background: -moz-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -webkit-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -o-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -ms-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: linear-gradient(0deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    -webkit-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 1px 1px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 1px 1px rgba(50, 50, 50, 0.75);
+    border-width: 0;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    display: table;
-    font-weight: 100;
-    font-family: 'Lato';
+#searchButton:active {
+    background: -moz-linear-gradient(270deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -webkit-linear-gradient(270deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -o-linear-gradient(270deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: -ms-linear-gradient(270deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    background: linear-gradient(180deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
+    -webkit-box-shadow: 0px 0px 1px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 1px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 0px 1px rgba(50, 50, 50, 0.75);
+}
+
+
+.search-input, .search-button, .title {
+    margin-top: 5%;
 }
 
 .imgElement {
     padding: 10px;
 }
 
-.container {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
+h2 {
+    font-weight: 100;
+    font-family: 'Lato';
+    padding-top: 50px;
+    color: white;
 }
 
-.content {
+.text-center {
     text-align: center;
-    display: inline-block;
 }
 
-.title {
-    font-size: 72px;
+.banner {
+    padding-bottom: 100px;
+    background: url(../img/bg.jpeg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
