--- a/public/css/instasearch.css
+++ b/public/css/instasearch.css
@@ -3,9 +3,9 @@
     color: rgb(230, 230, 230);
     font-size: 14px;
     text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
     background: rgb(210, 20, 20);
     background: -moz-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
     background: -webkit-linear-gradient(90deg, rgb(230, 20, 20) 30%, rgb(250, 20, 20) 70%);
@@ -34,8 +34,22 @@
     margin-top: 5%;
 }
 
-.imgElement {
-    padding: 10px;
+.img-element {
+    margin-right: 5px;
+    margin-bottom: 5px;
+    width: 32.6%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+  .img-element {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 14px;
+  }
+  .results {
+    padding: 20px 0 0 0px !important;
+  }
 }
 
 h2 {
@@ -50,10 +64,17 @@ h2 {
 }
 
 .banner {
-    padding-bottom: 100px;
+    padding-bottom: 25%;
     background: url(../img/bg.jpeg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-size: cover;
+    background-attachment: inherit;
+}
+
+.results {
+    padding: 10px 0 0 10px;
+    background-color: black;
     background-size: cover;
 }
