--- a/public/css/instasearch.css
+++ b/public/css/instasearch.css
@@ -44,6 +44,14 @@ body {
     color: #e3e3e3;
 }
 
+#imgOverlay {
+    position: relative;
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: 10%;
+}
+
 .search-input, .search-button, .title {
     margin-top: 5%;
 }
@@ -52,6 +60,36 @@ body {
     margin-right: 5px;
     width: 32.6%;
     height: auto;
+}
+
+.img-container {
+    position: relative;
+    display: inline;
+}
+
+.img-text { 
+    background-color: #000; 
+    background-color: rgba(0,0,0,0.6); 
+    color: white; 
+    display: none; 
+    padding: 5px 10px; 
+    text-align: center; 
+    position: absolute;
+    bottom: 3px; 
+    left: 0; 
+    right: 0;
+    width: 94.8%;
+    overflow: hidden;
+}
+
+.caption {
+    text-align: left;
+    font-size: 12px;
+}
+
+.username {
+    overflow: hidden;
+    font-size: 16px;
 }
 
 .errors {
@@ -65,7 +103,6 @@ body {
     .img-element {
         opacity: 0.8;
     }
-
     .img-element:hover {
         opacity: 1;
     }
@@ -79,6 +116,14 @@ body {
   }
   .results {
     padding: 20px 0 0 0px !important;
+  }
+  .img-text {
+    bottom: 17px;
+    width: 100%;
+  }
+  .username {
+    text-align: left;
+    font-size: 12px;
   }
 }
 
