--- a/public/css/instasearch.css
+++ b/public/css/instasearch.css
@@ -72,13 +72,13 @@ body {
     background-color: rgba(0,0,0,0.6); 
     color: white; 
     display: none; 
-    padding: 5px 10px; 
+    padding: 10px 25px; 
     text-align: center; 
     position: absolute;
     bottom: 3px; 
     left: 0; 
     right: 0;
-    width: 94.8%;
+    width: 88.3%;
     overflow: hidden;
 }
 
@@ -88,7 +88,8 @@ body {
 }
 
 .username {
-    overflow: hidden;
+    display: table;
+    height: 40px;
     font-size: 16px;
 }
 
@@ -122,6 +123,7 @@ body {
     width: 100%;
   }
   .username {
+    height: inherit;
     text-align: left;
     font-size: 12px;
   }
